fix style bug of homepage on IE

--- a/assets/src/sass/index.scss
+++ b/assets/src/sass/index.scss
@@ -2,7 +2,7 @@
 * @Author: printempw
 * @Date:   2016-06-04 20:54:53
 * @Last Modified by:   printempw
-* @Last Modified time: 2016-07-24 13:13:09
+* @Last Modified time: 2016-07-28 13:45:22
 */
 
 @import "style.scss";
@@ -87,7 +87,7 @@ body {
 }
 
 .content-wrapper {
-    background-color: initial;
+    background-color: transparent;
 }
 
 .splash-button {
